# checkip-rust

./: Cargo.toml
src/: arg_parse.rs  fetch_ip_addr.rs  ip_addr_client.rs  main.rs
src/ip_addr_client/: amazon_aws.rs  http_bin.rs  if_config.rs  prelude.rs
