[package]
name = "checkip"
version = "0.1.0"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
reqwest = { version = "0.10.8", features = ["json"]}
tokio = { version = "0.2.22", features = ["full"]}
anyhow = "1.0.34"
serde = { version = "1.0.117", features = ["derive"]}
